changed p tag to span tag

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="button-section">
           <button class="buy">
             <span class="icon"><img src="./images/icon-cart.svg" alt="" /></span>
-            <p>Add to Cart</p>
+            <span>Add to Cart</span>
           </button>
         </div>
       </div>
